fix nav__list height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5664,7 +5664,7 @@ section {
   }
 
   .nav__list {
-    min-height: 315px;
+    min-height: 319px;
     width: 100vw;
     top: -40px;
     padding-top: 20px;
